crates/swc_ecma_parser/tests/test262-error-references/fail/9ca6021261b01550.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/9ca6021261b01550.js:1:4
  |
1 | 0o1a
  |    ^

